UI alignment and clear covius data fix

--- a/src/containers/Dashboard/Covius/CoviusBulkOrder.css
+++ b/src/containers/Dashboard/Covius/CoviusBulkOrder.css
@@ -2,6 +2,7 @@
   position: relative;
   text-align: center;
   margin-bottom: 1.5rem;
+  padding-right: 0.625rem;
 }
 
 .reset-button-style {
@@ -24,7 +25,7 @@
 
 .loan-numbers {
   font-size: 1.1rem;
-  padding-left: 0.7rem;
+  padding-left: 1rem;
 }
 
 .handleAuto {
@@ -74,6 +75,7 @@
   width: 95%;
   margin: auto;
   padding-top: 0.2rem;
+  padding-left: 0.3rem;
   padding-bottom: 0.5rem;
 }
 
@@ -86,7 +88,8 @@
   margin: 1rem 1rem 2rem 0rem;
   font-weight: bold;
   font-size: 1.2rem;
-  padding-left: 0.7rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
 }
 
 /* .resetButton {
